// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Tab inside a component correctly 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist"
         class="van-tabs__nav van-tabs__nav--line"
         aria-orientation="horizontal"
    >
      <div id="van-tabs-8-0"
           role="tab"
           class="van-tab"
           tabindex="-1"
           aria-selected="false"
           aria-controls="van-tab-10"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          2
        </span>
      </div>
      <div id="van-tabs-8-1"
           role="tab"
           class="van-tab van-tab--active"
           tabindex="0"
           aria-selected="true"
           aria-controls="van-tab-9"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          1
        </span>
      </div>
      <div id="van-tabs-8-2"
           role="tab"
           class="van-tab"
           tabindex="-1"
           aria-selected="false"
           aria-controls="van-tab-11"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          3
        </span>
      </div>
      <div class="van-tabs__line"
           style="transform: translateX(50px) translateX(-50%);"
      >
      </div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div id="van-tab-9"
         role="tabpanel"
         class="van-tab__pane"
         tabindex="0"
         aria-labelledby="van-tabs-8-1"
         style
    >
      1
    </div>
    <div id="van-tab-10"
         role="tabpanel"
         class="van-tab__pane"
         tabindex="-1"
         aria-labelledby="van-tabs-8-0"
         style="display: none;"
    >
    </div>
    <div id="van-tab-11"
         role="tabpanel"
         class="van-tab__pane"
         tabindex="-1"
         aria-labelledby="van-tabs-8-2"
         style="display: none;"
    >
    </div>
  </div>
</div>
`;

exports[`should render correctly after inserting a tab 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist"
         class="van-tabs__nav van-tabs__nav--line"
         aria-orientation="horizontal"
    >
      <div id="van-tabs-1-0"
           role="tab"
           class="van-tab"
           tabindex="-1"
           aria-selected="false"
           aria-controls="van-tab-2"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          1
        </span>
      </div>
      <div id="van-tabs-1-1"
           role="tab"
           class="van-tab van-tab--active"
           tabindex="0"
           aria-selected="true"
           aria-controls="van-tab-4"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          2
        </span>
      </div>
      <div id="van-tabs-1-2"
           role="tab"
           class="van-tab"
           tabindex="-1"
           aria-selected="false"
           aria-controls="van-tab-3"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          3
        </span>
      </div>
      <div class="van-tabs__line"
           style="transform: translateX(50px) translateX(-50%); transition-duration: 0.3s;"
      >
      </div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div id="van-tab-2"
         role="tabpanel"
         class="van-tab__pane"
         tabindex="-1"
         aria-labelledby="van-tabs-1-0"
         style="display: none;"
    >
    </div>
    <div>
      <div id="van-tab-4"
           role="tabpanel"
           class="van-tab__pane"
           tabindex="0"
           aria-labelledby="van-tabs-1-1"
      >
        2
      </div>
    </div>
    <div id="van-tab-3"
         role="tabpanel"
         class="van-tab__pane"
         tabindex="-1"
         aria-labelledby="van-tabs-1-2"
         style="display: none;"
    >
      3
    </div>
  </div>
</div>
`;

exports[`should render correctly after inserting a tab with name 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist"
         class="van-tabs__nav van-tabs__nav--line"
         aria-orientation="horizontal"
    >
      <div id="van-tabs-5-0"
           role="tab"
           class="van-tab"
           tabindex="-1"
           aria-selected="false"
           aria-controls="van-tab-7"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          bar
        </span>
      </div>
      <div id="van-tabs-5-1"
           role="tab"
           class="van-tab van-tab--active"
           tabindex="0"
           aria-selected="true"
           aria-controls="van-tab-6"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          foo
        </span>
      </div>
      <div class="van-tabs__line"
           style="transform: translateX(50px) translateX(-50%); transition-duration: 0.3s;"
      >
      </div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div id="van-tab-7"
         role="tabpanel"
         class="van-tab__pane"
         tabindex="-1"
         aria-labelledby="van-tabs-5-0"
         style="display: none;"
    >
      bar
    </div>
    <div id="van-tab-6"
         role="tabpanel"
         class="van-tab__pane"
         tabindex="0"
         aria-labelledby="van-tabs-5-1"
         style
    >
      foo
    </div>
  </div>
</div>
`;

exports[`should render nav-bottom slot correctly 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist"
         class="van-tabs__nav van-tabs__nav--line"
         aria-orientation="horizontal"
    >
      <div class="van-tabs__line">
      </div>
    </div>
  </div>
  Nav Bottom
  <div class="van-tabs__content">
  </div>
</div>
`;
